[project]
name = "python-utils"
version = "0.0.0"
description = "Some python libraries I use"
authors = [
  {name="Rusty Brooks", email="me@rustybrooks.com"}
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[tool.uv.sources]
rb_publish = { workspace = true }
rb_api_framework = { workspace = true}
rb_sql = { workspace = true }


[tool.uv.workspace]
members = [
 "src/*"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.3.0",
    "pytest>=8.3.4",
    "rb_publish",
    "rb_api_framework",
    "rb_sql",
]
package = false


[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "venv",
    "datamonstr/migrations",
]

line-length = 100
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "F401" # requring alias or re-export for imported objects
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Sort and group imports
extend-select = ["I"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

exclude = [
    "venv"
]
