[project]
name = "rb_publish"
version = "0.0.1-rc.10"
description = "Simple library to update version and publish package"
authors = [
  { name = "Rusty Brooks", email = "me@rustybrooks.com" }
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "boto3~=1.34",
  "semver~=3.0.1"
]

[project.scripts]
core = "core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

