[project]
name = "rb_sql"
version = "0.0.0"
description = "Postgres abstraction on top of sqlalchemy"
authors = [
  { name = "Rusty Brooks", email = "me@rustybrooks.com" }
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "python-dateutil",
  "pytz",
  "sqlalchemy~=2.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
